propertee-core/src/test/resources/tests/111_thread_ignored_function.expected
Runtime error: Runtime Error at line 13:14: 'blocked_fn' is not available in this environment
