propertee-core/src/test/resources/tests/111_thread_ignored_function.tee
// spec v0.14.0: naming a blocked function rejects the whole script at load — before any
// statement runs — even when the call is reached only via a thread spawn (this supersedes the
// v0.13.0 worker-containment behavior). The leading PRINT never produces output.
PRINT("before")
function fine() do
    return 7
end
function blocked_fn() do
    return 1
end
multi r do
    thread a: fine()
    thread b: blocked_fn()
end
PRINT("after")
